<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>Automation</groupId>
	<artifactId>Web</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Web</name>

	<properties>
		<jbehave.core.version>4.1</jbehave.core.version>
		<jbehave.site.version>3.3.1</jbehave.site.version>
		<junit.runner.version>1.2.0</junit.runner.version>
		<log4j.version>1.2.17</log4j.version>
		<maven.compiler.version>3.3</maven.compiler.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<selenium.version>4.39.0</selenium.version>
		<cglib.version>3.2.11</cglib.version>
		<spring.version>3.2.2.RELEASE</spring.version>
		<extent.version>2.41.2</extent.version>
		<testng.version>7.8.0</testng.version>
		<javax.mail.version>1.6.2</javax.mail.version>
		<spring.core.version>6.1.14</spring.core.version>
		<spring.context.version>5.3.39</spring.context.version>
		<spring.beans.version>6.1.14</spring.beans.version>
	</properties>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/com.sun.mail/javax.mail -->
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>${javax.mail.version}</version>
		</dependency>

		<!-- Spring Core -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${spring.core.version}</version>
		</dependency>

		<!-- Spring Context -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.context.version}</version>
		</dependency>

		<!-- Spring Beans -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${spring.beans.version}</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>${testng.version}</version> <!-- Check for the latest version -->
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>6.1.0</version>
		</dependency>
		<!-- add it when update selenium version -->
		<!-- https://mvnrepository.com/artifact/cglib/cglib -->
		<dependency>
			<groupId>cglib</groupId>
			<artifactId>cglib</artifactId>
			<version>${cglib.version}</version>
		</dependency>

		<!-- report -->
		<dependency>
			<groupId>com.relevantcodes</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extent.version}</version>
		</dependency>

		<!-- Selenium -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>

		<!-- JBehave -->
		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>jbehave-junit-runner</artifactId>
			<version>${junit.runner.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbehave</groupId>
			<artifactId>jbehave-core</artifactId>
			<version>${jbehave.core.version}</version>
			<classifier>resources</classifier>
			<type>zip</type>
		</dependency>
		<dependency>
			<groupId>org.jbehave.site</groupId>
			<artifactId>jbehave-site-resources</artifactId>
			<version>${jbehave.site.version}</version>
			<type>zip</type>
		</dependency>
		<dependency>
			<groupId>org.jbehave</groupId>
			<artifactId>jbehave-spring</artifactId>
			<version>${jbehave.core.version}</version>
		</dependency>
		<dependency>
			<groupId>org.jbehave.web</groupId>
			<artifactId>jbehave-web-selenium</artifactId>
			<version>3.5.5</version>
			<exclusions>
				<exclusion>
					<groupId>org.seleniumhq.selenium</groupId>
					<artifactId>selenium-java</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.jbehave</groupId>
					<artifactId>jbehave-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- Log4j -->
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>${log4j.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven.compiler.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>